samples/_failures_safe/1761090748_7283cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ab85b47.c: In function ‘main’:
./samples/SAFE/__tmp_7ab85b47.c:159:12: error: missing terminating " character
  159 |     printf("Shortest distances from node %d
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7ab85b47.c:159:5: error: expected expression at end of input
  159 |     printf("Shortest distances from node %d
      |     ^~~~~~
./samples/SAFE/__tmp_7ab85b47.c:159:5: error: expected declaration or statement at end of input
